--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 <body>
   <div id="app"></div>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
